--- a/app/src/main/res/layout/polyv_view_player.xml
+++ b/app/src/main/res/layout/polyv_view_player.xml
@@ -1,12 +1,12 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/view_layout"
     android:orientation="vertical">
 
 
     <RelativeLayout
+        android:id="@+id/view_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/top_text_color_black">
@@ -127,4 +127,4 @@
             android:visibility="gone" />
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
